--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -15,7 +15,7 @@ jobs:
           # installation problems if out of date.
           python -m pip install --upgrade pip setuptools numpy
 
-          pip install black
+          pip install black!=25.11.0
       - name: Run black
         run: |
           black . --check
